--- a/Fractions rationnelles.tex
+++ b/Fractions rationnelles.tex
@@ -80,7 +80,7 @@ Pour $F = \frac{A}{B}, G = \frac{C}{D} \in K(X)$:
 \begin{enumerate}
 	\item $z$ p\^ole simple de $F=\frac{A}{B}$:
 		\[F = \frac{\lambda}{X -z} + H\]
-		Alors, $\lambda = \frac{A(z)}{B'(Z)}$
+		Alors, $\lambda = \frac{A(z)}{B'(z)}$
 	\item $z$ p\^ole multiple de $F= \frac{A}{(X-z)^\alpha T}$:
 		\[F = \frac{\lambda_1}{X-z} + \hdots + \frac{\lambda_\alpha}{(X-z)^\alpha} + H\]
 		On effectue alors un DL \`a l'ordre $\alpha -1$ en $0$ de $\varphi: t\in \mathbb{R} \mapsto \frac{A(z+t)}{T(z+t)}$
@@ -94,6 +94,8 @@ Pour $F = \frac{A}{B}, G = \frac{C}{D} \in K(X)$:
 \begin{enumerate}
 	\item Regarder parit\'e des fonctions
 	\item Si $F \in R(X),\ z \in \mathbb{C} \backslash \mathbb{R}$ un p\^ole alors $\bar{z}$ est aussi p\^ole de $F$ de m\^eme ordre
+	\item Pour trouver les constantes dans $\mathbb{R}$, il peut \^etre utilide d'\'evaluer le polyn\^ome sur certaines valeures.\\ On peut aussi
+		multiplier par $X^\alpha$ pour regarder les limites en $\infty$
 \end{enumerate}
 
 \end{document}
