--- a/Nombres complexes.tex
+++ b/Nombres complexes.tex
@@ -66,7 +66,7 @@ $z,z' \in \mathbb{C}$
 	\[|Re(\omega)| \leq |\omega| \leq |Re(\omega)| + |Im(\omega)| \text{ et } |Im(\omega)| \leq |\omega| \leq |Re(\omega)| + |Im(\omega)|\]
 \end{prop}
 
-\begin{prop} Lemme magique \\
+\begin{prop} `` Lemme magique `` \\
 	$A \in \mathbb{R}, z \in \mathbb{C}$:
 	\[|z| \leq A \Leftrightarrow \forall \omega \in \mathbb{C},\ Re(\omega z) \leq |\omega|A\]
 \end{prop}
