--- a/Théorie de la dimension.tex
+++ b/Théorie de la dimension.tex
@@ -82,9 +82,9 @@
 				\item $F$ est de dimension finie et $\dim F \leq \dim E$
 				\item Si $\dim F = \dim E$ alors $F=E$
 			\end{enumerate}
+		\item Soit $F$ un sev de $E$, alors $F$ admet (au moins 1, en g\'en\'eral une infinit\'e) un suppl\'ementaire
 		\item Soit $r \in \mathbb{N}^*, F_1, \hdots, F_r$ des sev de $E$ tels que $E = \oplus_{i=1}^r F_i$\\
 			Alors $\dim E = \sum_{i=1}^r \dim F_i$
-		\item Soit $F$ un sev de $E$, alors $F$ admet (au moins 1, en g\'en\'eral une infinit\'e) un suppl\'ementaire
 		\item Soient $F,G$ deux sev de $E$, alors $\dim F+G = \dim F + \dim G - \dim F \cap G$
 		\item Soient $E,F$ deux Kev de dimension finie, alors $E\times F$ est de dimension finie et $\dim (E\times F) = \dim E + \dim F$
 		\item Soient $E,F$ deux Kev de dimension finie, alors $\mathscr{L}(E,F)$ est de dimension finie et $\dim \mathscr{L}(E,F) = \dim E
@@ -116,7 +116,7 @@ Soit $E$ un Kev de dimension finie, $F$ un Kev qcq
 
 	\begin{rqs}
 		Ainsi, $rg\ f$ est le rang de la famille de vecteurs $(f(e_1), \hdots, f(e_n))$:\\
-			$rg\ f \leq \dim E$ et $rg\ f = n \Leftrightarrow (f(e_1), \hdots, f(e_n))$ libre $\Leftrightarrow f$ injective
+			$rg\ f \leq n = \dim E$ et $rg\ f = n \Leftrightarrow (f(e_1), \hdots, f(e_n))$ libre $\Leftrightarrow f$ injective
 	\end{rqs}
 \end{defi}
 
