--- a/Équation différentielles.tex
+++ b/Équation différentielles.tex
@@ -77,7 +77,7 @@ Soit une \'equation du type $(E)$: $\alpha(x)y' + \beta(x)y = \gamma(x)$
 					&\Leftrightarrow \lambda'(x) e^{-A} = b \\
 					&\Leftrightarrow \lambda'(x) = be^A
 				\end{align*}
-				En notant B une primitive de $be^A$ on voit que $Be^A$ est solution de E. On d\'eduit que:\\
+				En notant B une primitive de $be^A$ on voit que $Be^{-A}$ est solution de E. On d\'eduit que:\\
 				\[\mathscr{S} = Be^{-A} + \mathscr{S}_0 = \{t\in I \mapsto (\lambda + B(t))e^{-A(t)}/ \lambda \in \mathbb{R}\}\]
 		\end{enumerate}
 	\item Cas g\'en\'eral
