--- a/Espaces vectoriels.tex
+++ b/Espaces vectoriels.tex
@@ -271,4 +271,11 @@ Soit $E$ un Kev. $F$ et $G$ deux sev de $E$ tels que: $E = F \oplus G$. Tout $x 
 	\end{enumerate}
 \end{prop}
 
+%Remarques {{{1
+\section{Remarques}
+\begin{enumerate}
+	\item Quand il y a des hyperplans, penser \`a prendre des vecteurs en dehors puis \`a utiliser la suppl\'ementarit\'e
+	\item On peut montrer suppl\'ementarit\'e de $F,G$ en montrant que $\dim (F\cap G) = 0$
+\end{enumerate}
+
 \end{document}
