--- a/Espaces vectoriels.tex
+++ b/Espaces vectoriels.tex
@@ -52,7 +52,7 @@
 
 %Notions essentielles {{{1
 \section{Notions essentielles}
-Dans la suite $E$ est un Kev
+Dans la suite $E$ est un Kev.
 \subsection{Familles de vecteurs}
 \begin{defi} Combinaison lin\'eaire \\
 	$n \in \mathbb{N}^*,\ x_1, \hdots, x_n$ des vecteurs de $E$. On appelle combinaison lin\'eaire des vecteurs toute \'ecriture du type
