--- a/Suites réelles.tex
+++ b/Suites réelles.tex
@@ -147,7 +147,7 @@
 			\item $P$ a une racine double $q_0$ alors:
 				\[\mathscr{E} = \{n \in \mathbb{N} \mapsto (\alpha n + \beta) q_0^n / \alpha, \beta \in \mathbb{R}\}\]
 			\item $P$ admet 2 racines complexes conjugu\'ees: $z_1 = re^{i\theta}, z_2 = re^{-i\theta}$, alors:
-				\[\mathscr{E} = \{n \in \mathbb{N} \mapsto r^n(\alpha \cos(n\theta) + \beta \sin(n\theta) / \alpha, \beta \in \mathbb{R}\}\]
+				\[\mathscr{E} = \{n \in \mathbb{N} \mapsto r^n(\alpha \cos(n\theta) + \beta \sin(n\theta)) / \alpha, \beta \in \mathbb{R}\}\]
 		\end{enumerate}
 		\begin{rqs}
 			On peut proc\'eder par analyse-synth\`ese: on suppose $u$ solution de la relation, on d\'etermine les ensembles possibles de
