--- a/Matrices.tex
+++ b/Matrices.tex
@@ -235,7 +235,9 @@ M_{ij}$ est la i\`eme coordonn\'e de $e_j'$ dans $\mathscr{B}$
 
 \begin{enumerate}
 	\item Lorsqu'on demande de trouver des matrices particuli\`eres, on peut essayer en multipliant par la base canonique pour r\'eduire leur
-		nombre.
+		nombre et proc\'eder par analyse synth\`ese.
+	\item Il peut \^etre int\'eressant de transformer un probl\`eme sur les matrices en un probl\'eme sur les fonctions gr\^ace aux fonctions
+		canoniquement associ\'ees.
 \end{enumerate}
 
 \end{document}
