--- a/Déterminants.tex
+++ b/Déterminants.tex
@@ -107,6 +107,7 @@
 \begin{prop} $ $
 	\begin{enumerate}
 		\item [-] Soit $f \in \mathscr{L}(E)$, si $B = (e_1, \hdots, e_n)$ est une base de $E$, alors $\det f = \det_B (f(e_1), \hdots, f(e_n))$
+			et $\det f = \det Mat_B (f)$
 		\item [-] $f \in GL(E) \Leftrightarrow \det f \neq 0$
 		\item [-] $\det (\alpha f) = \alpha^n \det f$
 		\item [-] $\det (g \circ f) = \det g \det f$
