--- a/Développements limités.tex
+++ b/Développements limités.tex
@@ -86,9 +86,9 @@
 		On suppose qu'au moins un des $a_i$ n'est pas nul. Soit $p$ le minimum de l'ensemble des $a_i$ non nuls. \\
 		Alors $f(x) \underset{x_0}{\sim} a_p(x-x_0)^p$
 	\item Recherche d'asymptotes \\
-		Pour trouver une aymptote essaie de faire un developpement asymptotique de $x \mapsto \frac{f(x)}{x}$ au $V(+\infty)$, ce qui revient
+		Pour trouver une aymptote on essaie de faire un developpement asymptotique de $x \mapsto \frac{f(x)}{x}$ au $V(+\infty)$, ce qui revient
 		\`a faire un $DL(0)$ de $\varphi \mapsto h f(\frac{1}{h})$. \\
-		Ainsi on effectue une composition \'el\'ementaire par l'inverse de $\varphi$ puis on multiplie par $x$.
+		Apr\`es on effectue une composition \'el\'ementaire par l'inverse de $\varphi$ puis on multiplie par $x$.
 \end{enumerate}
 
 %DL Classiques {{{1
@@ -113,7 +113,7 @@
 \section{Remarques}
 \begin{enumerate}
 	\item On peut se ramener \`a un DL en $0$ en additionant le point demand\'e. \\
-	Si on demande $DL_n$ en 1 de $f$ telle que $f(x) = \cos(x)$, on cherche $DL_n(0)$ de $x \mapsto \cos(x+1)$
+	Si on demande $DL_n$ en 1 de $x \mapsto \cos(x)$, on cherche alors $DL_n(0)$ de $x \mapsto \cos(x+1)$
 \end{enumerate}
 
 \end{document}
