--- a/Séries.tex
+++ b/Séries.tex
@@ -25,8 +25,8 @@
 %Définitions, premières propriétées {{{1
 \section{D\'efinitions, premi\`eres propri\'et\'ees}
 
-\begin{defi} Une s\'erie d'\'el\'ements de $K$ est un couple $(u,S)$ o\`u $u = (u_n)_{n \in \mathbb{N}}$ est une suite d'\'el\'ements de $K$ et
-$S$ la suite d\'efinie par: $S_n = \sum_{k=0}^n u_k$\\
+\begin{defi} Une s\'erie d'\'el\'ements de $\mathbb{K}$ est un couple $(u,S)$ o\`u $u = (u_n)_{n \in \mathbb{N}}$ est une suite d'\'el\'ements de
+$\mathbb{K}$ et $S$ la suite d\'efinie par: $S_n = \sum_{k=0}^n u_k$\\
 On dit que $S$ est la suite des sommes partielles de la s\'erie et $u$ le terme g\'en\'eral de la s\'erie. On note $\sum_{n \in \mathbb{N}} u_n$
 cette s\'erie.
 \end{defi}
@@ -56,25 +56,26 @@ $\sum_{n=0}^{+\infty} u_n$
 
 \begin{prop} Faits de base
 	\begin{enumerate}
-		\item [-] Soient $u,v \in K^{\mathbb{N}},\ \alpha, \in K$. On suppose $\sum u_n$ et $\sum v_n$ convergentes:\\
+		\item [-] Soient $u,v \in \mathbb{K}^{\mathbb{N}},\ \alpha, \in K$. On suppose $\sum u_n$ et $\sum v_n$ convergentes:\\
 			alors $\sum(\alpha u_n + v_n)$ converge et $\sum_{n=0}^{+\infty} (\alpha u_n + v_n) = \alpha \sum_{n=0}^{+\infty} u_n +
 			\sum_{n=0}^{+\infty} v_n$
-		\item [-] Soit $u \in K^\mathbb{N}$. On suppose que $\sum u_n$ converge, alors $u$ converge vers $0$. Si $u$ ne converge pas vers $0$,
-			on dit qu'il y a divergence grossi\`ere
-		\item [-] $u \in K^\mathbb{N}$ est convergente $\Leftrightarrow \sum_{n \in \mathbb{N}} (u_{n+1} - u_n)$ est convergente
+		\item [-] Soit $u \in \mathbb{K}^\mathbb{N}$. On suppose que $\sum u_n$ converge, alors $u$ converge vers $0$. Si $u$ ne converge
+			pas vers $0$, on dit qu'il y a divergence grossi\`ere
+		\item [-] $u \in \mathbb{K}^\mathbb{N}$ est convergente $\Leftrightarrow \sum_{n \in \mathbb{N}} (u_{n+1} - u_n)$ est convergente
 	\end{enumerate}
 \end{prop}
 
 %Séries à termes positifs {{{1
 \section{S\'eries \`a termes positifs}
 \begin{defi}
-Une s\'erie \`a termes positifs (SATP) est une s\'erie $\sum u_n$ o\`u $u$ est une suite r\'eelle positive.
+Une s\'erie \`a termes positifs (SATP) est une s\'erie $\sum u_n$ o\`u $u$ est une suite r\'eelle positive (au moins \`a partir d'un
+	certain rang).
 \end{defi}
 
 \begin{prop} Soit $u \in \mathbb{R}_{+}^{\mathbb{N}}$
 	\begin{enumerate}
 		\item [-] $\sum u_n$ convergente $\Leftrightarrow S$ major\'ee
-		\item [-] $\sum u_n$ divergente $\Leftrightarrow S_n \rightarrow \infty$
+		\item [-] $\sum u_n$ divergente $\Leftrightarrow S_n \rightarrow +\infty$
 	\end{enumerate}
 \end{prop}
 
@@ -93,5 +94,68 @@ Une s\'erie \`a termes positifs (SATP) est une s\'erie $\sum u_n$ o\`u $u$ est u
 	\item [-] Si $u_n \sim v_n$ alors $\sum_{n \in \mathbb{N}} u_n$ et $\sum_{n \in \mathbb{N}} v_n$ sont de m\^eme nature
 \end{enumerate}
 \end{coro}
+
+\begin{theo} Soient $(a_n), (b_n) \in \mathbb{R}_+^{\mathbb{N}}$ avec $a_n \sim b_n$
+	\begin{enumerate}
+		\item Si $\sum a_n < +\infty$ alors $\sum b_n < +\infty$ et $\sum_{k=n}^{+\infty} a_k \sim \sum_{k=n}^{+\infty} b_k$
+		\item Si $\sum a_n = +\infty$ alors $\sum b_n = +\infty$ et $\sum_{k=0}^{n} a_k \sim \sum_{k=0}^{n} b_k$
+	\end{enumerate}
+\end{theo}
+
+\begin{theo} Crit\`ere de D'Alembert\\
+	Soit $(a_n)$ une suite de r\'eels strictement positifs. On suppose $(\frac{a_{n+1}}{a_n})$ a une limite $l \in \mathbb{R} \cup +\infty$,
+		alors: \begin{enumerate}
+		\item si $l < 1$ on a $\sum a_n < +\infty$
+		\item si $l > 1$ alors $a_n \rightarrow +\infty$
+		\item si $l = 1$, on ne peut rien affirmer
+	\end{enumerate}
+\end{theo}
+
+
+%Convergence absolue {{{1
+\section{Convergence absolue}
+\begin{defi} Soit $u \in \mathbb{C}^\mathbb{N}$. On dit que la s\'erie $\sum u_n$ est absolument convergente lorsque la SATP $\sum |u_n|$ est
+convergente.
+\end{defi}
+
+\begin{theo} Toute s\'erie absolument convergente est convergente
+
+\begin{prop} Convergence
+	\begin{enumerate}
+		\item [-] Crit\`ere $n^\alpha u_n$: Soit $u \in \mathbb{C}^\mathbb{N}$. On suppose qu'il existe $\alpha > 1,\ n^\alpha u_n \rightarrow 0$
+			Alors $\sum u_n $ converge absolument
+		\item [-] Soit $u \in \mathbb{C}^\mathbb{N}$. On suppose $|\frac{u_{n+1}}{u_n}| \rightarrow l \in [0,1[$ alors $\sum u_n$ converge
+			absolument
+	\end{enumerate}
+\end{prop}
+
+\end{theo}
+
+
+%Séries alternées {{{1
+\section{Séries altern\'ees}
+\begin{theo}
+	Soit $u$ une suite r\'eelle positive qui d\'ecroit vers $0$, alors $\sum (-1)^n u_n$ converge et de plus, $\forall n \in \mathbb{N},
+	|\sum_{k=n+1}^{+\infty} (-1)^k u_k| \leq u_{n+1}$
+\end{theo}
+
+
+%Séries de référence {{{1
+\section{S\'eries de r\'ef\'erence}
+\begin{enumerate}
+	\item S\'erie g\'eom\'etrique: $\sum q^n$ converge $\Leftrightarrow |q| < 1$
+	\item S\'eries de Riemann: soit $\alpha \in \mathbb{R}$ alors,\\
+		$\sum_{n \in \mathbb{N}^*} \frac{1}{n^\alpha} < +\infty \Leftrightarrow \alpha > 1$
+	\item $H_n = \sum \frac{1}{k} \sim \ln n + \gamma + \frac{1}{2n}$
+\end{enumerate}
+
+%Remarques {{{1
+\section{Remarques}
+\begin{enumerate}
+	\item Pour des sommes de la forme $\sum_k \frac{1}{\alpha k + \hdots}$ on peut essayer de se ramener \`a l'\'etude de $H_n$
+	\item Pour d\'eterminer qu'une suite $u$ converge vers en certain r\'eel, on peut consid\'erer $u_{n+1} - u_n$
+	\item Pour faire un developpement asymptotique, on peut utiliser $u_{n+1} - u_n$ puis l'\'equivalence des sommes
+\end{enumerate}
+
 
 \end{document}
