--- a/Espaces euclidiens.tex
+++ b/Espaces euclidiens.tex
@@ -34,7 +34,7 @@
 \end{defi}
 
 \begin{rqs} Soit $\varphi$ bilin\'eaire, alors $\varphi$ est d\'efinie positive $\Leftrightarrow$ \begin{enumerate}
-	\item $\forall x \in E, \varphi(x,x) \geq 0$
+	\item $\forall x \in E,\ \varphi(x,x) \geq 0$
 	\item $\varphi(x,x) = 0 \Rightarrow x = 0$
 	\end{enumerate}
 \end{rqs}
@@ -48,15 +48,15 @@
 	\end{enumerate}
 \end{defi}
 
-\begin{theo} Soit $E$ un Rev et $<,>$ un ps sur $E$, pour $x \in E$, posons $\|x\| = \sqrt{<x,x>}$. Alors $x \in E \mapsto \|x\|$ est
-une norme sur $E$ appel\'ee norme euclidienne (associ\'e au ps $<,>$)
+\begin{theo} Soit $E$ un Rev et $<,>$ un ps sur $E$, pour $x \in E$, posons \mbox{$\|x\| = \sqrt{<x,x>}$}, alors $x \in E \mapsto \|x\|$ est
+une norme sur $E$ appel\'ee norme euclidienne associ\'e au produit scalaire $<,>$
 \end{theo}
 
 \begin{rqs} In\'egalit\'e de Cauchy-Schwarz\\
 	$\forall x,y \in E,\ |<x,y>| \leq \|x\| \|y\|$
 \end{rqs}
 
-\begin{prop} Quelques relations
+\begin{prop} Relations entre ps et $\|.\|$
 	\begin{enumerate}
 		\item $\|\sum_{i=1}^n x_i \| ^2 = \sum_{i=1}^n \|x_i\|^2 + 2\sum_{1 \leq i < j \leq n} <x_i,x_j>$
 		\item En particulier, (identit\'e du parall\'elogramme):\\
@@ -64,6 +64,9 @@ une norme sur $E$ appel\'ee norme euclidienne (associ\'e au ps $<,>$)
 		\item $4<x,y> = \|x+y\|^2 - \|x-y\|^2$
 	\end{enumerate}
 \end{prop}
+
+%Familles orthogonales, processus d'orthonormalisation {{{1
+\section{Familles orthogonales, processus d'orthonormalisation}
 
 \begin{defi} Vecteurs orthogonaux \\
 	Soit $<,>$ un ps sur le Rev $E$, $x,y \in E$.
@@ -80,8 +83,8 @@ Soient $x,y \in E\backslash \{0\}$. Par d\'efinition, l'angle g\'eom\'etrique de
 Ainsi, $<x,y> = \|x\| \|y\| \cos \theta$
 \end{defi}
 
-\subsection{Familles orthogonales}
-\begin{defi} Soit $E$ un Rev muni d'un ps $<>$, $(x_i)_{i\in I}$ une famille de vecteurs de $E$. On dit que la famille est orthogonale si
+\begin{defi} Famille orthogonale \\
+Soit $E$ un Rev muni d'un ps $<>$, $(x_i)_{i\in I}$ une famille de vecteurs de $E$. On dit que la famille est orthogonale si
 $x_i \perp x_j$ pour $i\neq j$. Elle est orthonorm\'ee si de plus $\|x_i\| = 1$
 \end{defi}
 
@@ -90,14 +93,134 @@ orthonorm\'ee de vecteurs de $E$ est libre
 \end{theo}
 
 \begin{theo} Orthonormalisation de Gram-Schmidt \\
-Soit $E$ un Rev muni d'un ps $<>. (x_1, \hdots, x_n)$ une famille libre de vecteurs de $E$. Alors il existe une unique famille orthonormale
+Soit $E$ un Rev muni d'un ps $<>,\ (x_1, \hdots, x_n)$ une famille libre de vecteurs de $E$. Alors il existe une unique famille orthonormale
 $(e_1, \hdots, e_n)$ de vecteurs de $E$ telle que:
 \begin{enumerate}
 	\item $Vect(e_1, \hdots, e_i) = Vect(x_1, \hdots, x_i)\ (1 \leq i \leq n)$
 	\item $<e_i,x_i> >0\ (1 \leq i \leq n)$
 \end{enumerate}
-
 \end{theo}
 
+\begin{theo} Soit $E$ un Rev de dimension finie  $<,>$ un ps sur $E$, alors $E$ admet une base orthonorm\'ee
+	\begin{rqs}
+	Travailler ser des bases orthonorm\'ees permet de simplifier les calculs sur les ps
+	\end{rqs}
+\end{theo}
+
+%Orthogonal d'une partie {{{1
+\section{Orthogonal d'une partie}
+\begin{defi} Soit $E$ un Rev muni d'un ps $<,>$, soit $A$ une partie non vide de $E$. L'orthogonal de $A$ est l'ensemble $A^{\perp} =
+	\{x \in E,\ \forall a \in A\ <x,a> = 0\}$
+\end{defi}
+
+\begin{prop} $ $
+	\begin{enumerate}
+		\item [-] $A^{\perp}$ est un sev de $E$
+		\item [-] Pour $A,B \subset E,\ A \subset B \Rightarrow B^\perp \subset A^\perp$
+		\item [-] $A \subset A^{\perp \perp}$
+		\item [-] $A^\perp = Vect(A)^\perp$
+	\end{enumerate}
+\end{prop}
+
+\begin{defi} Soient $A,B \subset E$. On dit que $A$ et $B$ sont orthogonaux ($A \perp B$) si $\forall a \in A,\ \forall b \in B,\ a \perp b
+	\Leftrightarrow A \subset B^\perp$ ou $B \subset A^\perp$
+\end{defi}
+
+\begin{theo} Soit $F$ un sev de dimension finie de $E$, alors $E = F \oplus F^\perp$
+	\begin{rqs}
+		Soit $F$ sev de $E$. Si $E = F \oplus F^\perp$ alors $F^{\perp \perp} = F$. Ainsi, Si $F$ est un sev de dimension finie de $E$ alors
+		$F = F^{\perp \perp}$
+	\end{rqs}
+\end{theo}
+
+\subsection{Projecteurs orthogonaux, sym\'etries orthogonales, distance \`a un sev}
+Soit $F$ un sev de $E$ tel que $E = F \oplus F^\perp$. Soit $x \in E$, $x = y + z$ ($y \in F ,\ z \in F^\perp$)
+\begin{defi} Projecteur \\
+	On appelle projecteur orthogonal sur $F$, le projecteur sur $F$ parall\`element \`a $F^{\perp}$ \\
+	$P_F(x) = y$
+\end{defi}
+\begin{defi} Sym\'etrie \\
+	On appelle sym\'etrie orthogonale par rapport \`a $F$, la sym\'etrie par rapport \`a $F$ parall\'element \`a $F^\perp$: $s_F(x) = y - z$
+\end{defi}
+\begin{defi} Distance \\
+	On appelle distance de $x$ \`a $F$ $d(x,F) = \inf \{ \|x-y'\| ,\ y' \in F\}$ \\
+	Alors $d(x,F) = \|z\|$ o\`u $z = x - P_F(x)$
+\end{defi}
+
+
+%Espaces euclidiens {{{1
+\section{Espaces euclidiens}
+
+\begin{defi}
+	Un espace euclidien est un couple $(E, <>)$ o\`u $E$ est un Rev de dimension finie et $<>$ un ps sur $E$
+\end{defi}
+
+\begin{prop} Faits de base
+	\begin{enumerate}
+		\item [-] $E$ admet des bases orhonorm\'ees
+		\item [-] Soit $F$ un sev de $E$, alors $E = F \oplus F^\perp$ ($\Rightarrow \dim F^\perp = \dim E - \dim F$ et $F=F^{\perp \perp}$)
+		\item [-] Soient $F$ et $G$ deux sev de $E$ alors:
+			\begin{enumerate}
+				\item $(F+G)^\perp = F^\perp \cap G^\perp$
+				\item $(F\cap G)^\perp = F^\perp + G^\perp$
+			\end{enumerate}
+	\end{enumerate}
+\end{prop}
+
+\begin{theo} BON incompl\`ete\\
+	On peut compl\'eter toute famille orthonorm\'ee de vecteurs de $E$ en base orthonorm\'ee
+	\begin{rqs}
+		Dans le cas $|E| = 2$, si $x$ est vecteur unitaire de $E$, il existe exactement deux vecteurs de $E$ pour compl\'eter la BON
+	\end{rqs}
+\end{theo}
+
+\subsection{Hyperplans}
+
+\begin{theo}
+	Si $\varphi$ est une forme lin\'eaire sur $E$ alors il existe un unique $a \in E$ tel que $\varphi = <a,.>$ \\
+	Soit $H$ un hyperplan, il existe alors $a \in E\backslash \{0\}$ tel que $H = \ker <a,.> = \{x \in E , <a,x> = 0\} = \{a\}^\perp$
+\end{theo}
+
+\begin{prop}
+	Pour $a,a' \in E\backslash \{0\}$, $\{a\}^\perp = \{a'\}^\perp \Leftrightarrow \exists \alpha \in \mathbb{R}^*, a' = \alpha a$
+\end{prop}
+
+\begin{prop}
+	Soit $H$ un hyperplan. Pour $x \in E$, $d(x,H) = d(x, \{a\}^\perp) = \frac {|<a,x>|}{\|a\|}$
+\end{prop}
+
+\begin{defi}
+	On appelle r\'eflexion toute sym\'etrie orthogonale par rapport \`a un hyperplan.
+\end{defi}
+
+\begin{defi} $ $
+	\begin{enumerate}
+		\item Soit $p$ un projecteur de $E$, on dit que $p$ est projecteur orthogonal si $Ker\ p \perp Im\  p \Leftrightarrow Ker\ p
+			\subset Im\ p^\perp$ ou $ Im\ p \subset Ker\ p^\perp$ .
+		\item Soit $s$ une sym\'etrie de $E$, on dit que $s$ est sym\'etrie orthogonale si $Ker\ (s-Id_E) \perp Ker\ (s + Id_E)$
+	\end{enumerate}
+\end{defi}
+
+\begin{prop} $ $
+	\begin{enumerate}
+		\item $p$ est un projecteur orthogonal $\Leftrightarrow \forall x \in E, \|p(x)\| \leq \|x\|$
+		\item $s$ est une sym\'etrie orthogonale $\Leftrightarrow \forall x \in E, \|s(x)\| = \|x\|$
+	\end{enumerate}
+\end{prop}
+
+%Le groupe orthogonal {{{1
+\section{Le groupe orthogonal}
+
+\begin{defi}
+	Soit $f \in \mathscr{L}(E)$. On dit que $f$ est une isom\'etrie (ou transformation orthogonale) si $f$ conserve la norme: $\forall x \in E,
+	\|f(x)\| = \|x\|$
+\end{defi}
+
+\begin{prop} On note $O(E)$ l'ensemble des isom\'etries de $E$
+	\begin{enumerate}
+		\item $O(E) \subset GL(E)$
+		\item $O(E)$ est un sous groupe de $(GL(E),\circ)$
+	\end{enumerate}
+\end{prop}
 
 \end{document}
