--- a/Espaces euclidiens.tex
+++ b/Espaces euclidiens.tex
@@ -24,13 +24,15 @@
 
 %Produit scalaire, norme euclidienne {{{1
 \section{Produit scalaire, norme euclidienne}
+
 \subsection{Produit scalaire}
+
 \begin{defi} Soit $E$ un Rev, un produit scalaire sur $E$ est une application $\varphi : E \times E \rightarrow \mathbb{R}$ telle que:
-\begin{enumerate}
-	\item $\varphi$ est bilin\'eaire
-	\item $\varphi$ est sym\'etrique: $\varphi(x,y) = \varphi(y,x)$
-	\item $\varphi$ est d\'efinie positive: $\forall x \in E \backslash \{0\},\ \varphi(x,x) > 0$
-\end{enumerate}
+	\begin{enumerate}
+		\item $\varphi$ est bilin\'eaire
+		\item $\varphi$ est sym\'etrique: $\varphi(x,y) = \varphi(y,x)$
+		\item $\varphi$ est d\'efinie positive: $\forall x \in E \backslash \{0\},\ \varphi(x,x) > 0$
+	\end{enumerate}
 \end{defi}
 
 \begin{rqs} Soit $\varphi$ bilin\'eaire, alors $\varphi$ est d\'efinie positive $\Leftrightarrow$ \begin{enumerate}
@@ -39,7 +41,9 @@
 	\end{enumerate}
 \end{rqs}
 
+
 \subsection{Norme euclidienne}
+
 \begin{defi} Soit $E$ un Rev. Une norme sur $E$ est une application $N:E \rightarrow \mathbb{R}_+$ telle que:
 	\begin{enumerate}
 		\item Pour $x \in E, N(x) = 0 \Leftrightarrow x = 0$
@@ -48,20 +52,19 @@
 	\end{enumerate}
 \end{defi}
 
-\begin{theo} Soit $E$ un Rev et $<,>$ un ps sur $E$, pour $x \in E$, posons \mbox{$\|x\| = \sqrt{<x,x>}$}, alors $x \in E \mapsto \|x\|$ est
-une norme sur $E$ appel\'ee norme euclidienne associ\'e au produit scalaire $<,>$
+\begin{theo}  Norme euclidienne \\
+	Soit $E$ un Rev et $\langle\ \rangle$ un ps sur $E$, pour $x \in E$, posons \mbox{$\|x\| = \sqrt{\langle x,x \rangle}$}, alors $x \in E
+	\mapsto \|x\|$ est une norme sur $E$ appel\'ee norme euclidienne associ\'e au produit scalaire $\langle\ \rangle$
 \end{theo}
 
-\begin{rqs} In\'egalit\'e de Cauchy-Schwarz\\
-	$\forall x,y \in E,\ |<x,y>| \leq \|x\| \|y\|$
-\end{rqs}
-
-\begin{prop} Relations entre ps et $\|.\|$
+\begin{prop} Relations entre ps et $\| \ \|$
 	\begin{enumerate}
-		\item $\|\sum_{i=1}^n x_i \| ^2 = \sum_{i=1}^n \|x_i\|^2 + 2\sum_{1 \leq i < j \leq n} <x_i,x_j>$
-		\item En particulier, (identit\'e du parall\'elogramme):\\
+		\item [-] In\'egalit\'e de Cauchy-Schwarz: $\forall x,y \in E,\ |\langle x,y \rangle| \leq \|x\| \|y\|$
+		\item [-] $\|x+y\| = \|x\| + \|y\| \Leftrightarrow (x \lor y = 0) \lor (\exists \lambda \in \mathbb{R}_+,\ y = \lambda x)$
+		\item [-] $\|\sum_{i=1}^n x_i \| ^2 = \sum_{i=1}^n \|x_i\|^2 + 2\sum_{1 \leq i < j \leq n} \langle x_i,x_j \rangle$
+		\item [-] En particulier, (identit\'e du parall\'elogramme):\\
 			$\|x+y\|^2 + \|x-y\|^2 = 2(\|x\|^2 + \|y\|^2)$
-		\item $4<x,y> = \|x+y\|^2 - \|x-y\|^2$
+		\item [-] $\|x+y\|^2 - \|x-y\|^2= 4\langle x,y \rangle$
 	\end{enumerate}
 \end{prop}
 
@@ -69,62 +72,58 @@ une norme sur $E$ appel\'ee norme euclidienne associ\'e au produit scalaire $<,>
 \section{Familles orthogonales, processus d'orthonormalisation}
 
 \begin{defi} Vecteurs orthogonaux \\
-	Soit $<,>$ un ps sur le Rev $E$, $x,y \in E$.
-	On dit que $x$ est orthogonal \`a $y$ si $<x,y> = 0$
-
-	\begin{rqs}
-		Si $x_i \perp x_j,\ i \neq j$ alors $\|\sum_{i=1}^n x_i \|^2 = \sum_{i=1}^n \|x_i\|^2$
-	\end{rqs}
-\end{defi}
-
-\begin{defi} Angle g\'eom\'etrique \\
-Soient $x,y \in E\backslash \{0\}$. Par d\'efinition, l'angle g\'eom\'etrique de $x$ et $y$ est $\theta = \arccos
-\frac{<x,y>}{\|x\| \|y\|} \in [0, \pi].$\\
-Ainsi, $<x,y> = \|x\| \|y\| \cos \theta$
+	Soit $\langle\ \rangle$ un ps sur le Rev $E$, $(x,y) \in E^2$. Ainsi $x$ est orthogonal \`a $y$ si $\langle x,y \rangle = 0$
+	\begin{rqs} Si $x_i \perp x_j,\ i \neq j$ alors $\|\sum_{i=1}^n x_i \|^2 = \sum_{i=1}^n \|x_i\|^2$ \end{rqs}
 \end{defi}
 
 \begin{defi} Famille orthogonale \\
-Soit $E$ un Rev muni d'un ps $<>$, $(x_i)_{i\in I}$ une famille de vecteurs de $E$. On dit que la famille est orthogonale si
-$x_i \perp x_j$ pour $i\neq j$. Elle est orthonorm\'ee si de plus $\|x_i\| = 1$
+	Soit $E$ un Rev muni d'un ps $\langle\ \rangle$ et $(x_i)_{i\in I}$ une famille de vecteurs de $E$. On dit que la famille est orthogonale si
+	$x_i \perp x_j$ pour $i\neq j$. Elle est orthonorm\'ee si de plus $\|x_i\| = 1$
 \end{defi}
 
-\begin{theo} Soit $(x_i)_{i\in I}$ une famille orthogonale de vecteurs non nuls de $E$, alors la famille est libre. En particulier, toute famille
-orthonorm\'ee de vecteurs de $E$ est libre
-\end{theo}
-
 \begin{theo} Orthonormalisation de Gram-Schmidt \\
-Soit $E$ un Rev muni d'un ps $<>,\ (x_1, \hdots, x_n)$ une famille libre de vecteurs de $E$. Alors il existe une unique famille orthonormale
-$(e_1, \hdots, e_n)$ de vecteurs de $E$ telle que:
-\begin{enumerate}
-	\item $Vect(e_1, \hdots, e_i) = Vect(x_1, \hdots, x_i)\ (1 \leq i \leq n)$
-	\item $<e_i,x_i> >0\ (1 \leq i \leq n)$
-\end{enumerate}
+	Soit $E$ un Rev muni d'un ps $\langle\ \rangle$ et $(x_1, \hdots, x_n)$ une famille libre de vecteurs de $E$. Alors il existe une unique
+	famille orthonormale $(e_1, \hdots, e_n)$ de vecteurs de $E$ telle que:
+	\begin{enumerate}
+		\item $Vect(e_1, \hdots, e_i) = Vect(x_1, \hdots, x_i)\ (1 \leq i \leq n)$
+		\item $\langle e_i,x_i \rangle > 0\ (1 \leq i \leq n)$
+	\end{enumerate}
 \end{theo}
 
-\begin{theo} Soit $E$ un Rev de dimension finie  $<,>$ un ps sur $E$, alors $E$ admet une base orthonorm\'ee
-	\begin{rqs}
-	Travailler ser des bases orthonorm\'ees permet de simplifier les calculs sur les ps
-	\end{rqs}
-\end{theo}
+\begin{prop} $ $
+	\begin{enumerate}
+		\item [-] Soit $(x_i)_{i\in I}$ une famille orthogonale de vecteurs non nuls de $E$, alors la famille est libre. En particulier, toute
+			famille orthonorm\'ee de vecteurs de $E$ est libre
+		\item [-] Soit $E$ un Rev de dimension finie  $\langle\ \rangle$ un ps sur $E$, alors $E$ admet une base orthonorm\'ee
+			\begin{rqs} Travailler ser des bases orthonorm\'ees permet de simplifier les calculs sur les ps \end{rqs}
+	\end{enumerate}
+\end{prop}
+
+\begin{defi} Angle g\'eom\'etrique \\
+	Soient $x,y \in E\backslash \{0\}$. Par d\'efinition, l'angle g\'eom\'etrique de $x$ et $y$ est:
+	\[\theta = \arccos \frac{\langle x,y \rangle}{\|x\| \|y\|} \in [0, \pi]\]
+	Ainsi, $\langle x,y \rangle = \|x\| \|y\| \cos \theta$
+\end{defi}
 
 %Orthogonal d'une partie {{{1
 \section{Orthogonal d'une partie}
-\begin{defi} Soit $E$ un Rev muni d'un ps $<,>$, soit $A$ une partie non vide de $E$. L'orthogonal de $A$ est l'ensemble $A^{\perp} =
-	\{x \in E,\ \forall a \in A\ <x,a> = 0\}$
+\begin{defi} Ensembles orthogonaux
+	\begin{enumerate}
+		\item Soit $E$ un Rev muni d'un ps $\langle\ \rangle$ et $A$ une partie non vide de $E$. L'orthogonal de $A$ est l'ensemble $A^{\perp} =
+			\{x \in E,\ \forall a \in A\ \langle x,a \rangle = 0\}$
+		\item Soient $A,B \subset E$. On dit que $A$ et $B$ sont orthogonaux ($A \perp B$) si $\forall a \in A,\ \forall b \in B,\ a \perp b
+			\ (\Leftrightarrow A \subset B^\perp$ ou $B \subset A^\perp$)
+	\end{enumerate}
 \end{defi}
 
 \begin{prop} $ $
 	\begin{enumerate}
 		\item [-] $A^{\perp}$ est un sev de $E$
-		\item [-] Pour $A,B \subset E,\ A \subset B \Rightarrow B^\perp \subset A^\perp$
+		\item [-] $A \subset B \Rightarrow B^\perp \subset A^\perp$
 		\item [-] $A \subset A^{\perp \perp}$
 		\item [-] $A^\perp = Vect(A)^\perp$
 	\end{enumerate}
 \end{prop}
-
-\begin{defi} Soient $A,B \subset E$. On dit que $A$ et $B$ sont orthogonaux ($A \perp B$) si $\forall a \in A,\ \forall b \in B,\ a \perp b
-	\Leftrightarrow A \subset B^\perp$ ou $B \subset A^\perp$
-\end{defi}
 
 \begin{theo} Soit $F$ un sev de dimension finie de $E$, alors $E = F \oplus F^\perp$
 	\begin{rqs}
@@ -134,25 +133,40 @@ $(e_1, \hdots, e_n)$ de vecteurs de $E$ telle que:
 \end{theo}
 
 \subsection{Projecteurs orthogonaux, sym\'etries orthogonales, distance \`a un sev}
+
 Soit $F$ un sev de $E$ tel que $E = F \oplus F^\perp$. Soit $x \in E$, $x = y + z$ ($y \in F ,\ z \in F^\perp$)
-\begin{defi} Projecteur \\
-	On appelle projecteur orthogonal sur $F$, le projecteur sur $F$ parall\`element \`a $F^{\perp}$ \\
-	$P_F(x) = y$
+\begin{defi} Projecteur
+	\begin{itemize}
+		\item [-] On appelle projecteur orthogonal sur $F$, le projecteur sur $F$ parall\`element \`a $F^{\perp}$:  $P_F(x) = y$
+		\item [-] On dit \'egalement que $p$ est projecteur orthogonal si $Ker\ p \perp Im\  p\ (\Leftrightarrow Ker\ p
+			\subset Im\ p^\perp$ ou $ Im\ p \subset Ker\ p^\perp$.)
+	\end{itemize}
 \end{defi}
-\begin{defi} Sym\'etrie \\
-	On appelle sym\'etrie orthogonale par rapport \`a $F$, la sym\'etrie par rapport \`a $F$ parall\'element \`a $F^\perp$: $s_F(x) = y - z$
+\begin{defi} Sym\'etrie
+	\begin{enumerate}
+		\item [-] On appelle sym\'etrie orthogonale par rapport \`a $F$, la sym\'etrie par rapport \`a $F$ parall\'element \`a $F^\perp$: $s_F(x)
+			= y - z$
+		\item [-] On dit que $s$ est sym\'etrie orthogonale si $Ker\ (s-Id_E) \perp Ker\ (s + Id_E)$
+	\end{enumerate}
 \end{defi}
 \begin{defi} Distance \\
 	On appelle distance de $x$ \`a $F$ $d(x,F) = \inf \{ \|x-y'\| ,\ y' \in F\}$ \\
-	Alors $d(x,F) = \|z\|$ o\`u $z = x - P_F(x)$
+	Ainsi $d(x,F) = \|z\|$ o\`u $z = x - P_F(x)$
 \end{defi}
+
+\begin{prop} Norme projections, sym\'etries
+	\begin{enumerate}
+		\item [-] $p$ est un projecteur orthogonal $\Leftrightarrow \forall x \in E, \|p(x)\| \leq \|x\|$
+		\item [-] $s$ est une sym\'etrie orthogonale $\Leftrightarrow \forall x \in E, \|s(x)\| = \|x\|$
+	\end{enumerate}
+\end{prop}
 
 
 %Espaces euclidiens {{{1
 \section{Espaces euclidiens}
 
 \begin{defi}
-	Un espace euclidien est un couple $(E, <>)$ o\`u $E$ est un Rev de dimension finie et $<>$ un ps sur $E$
+	Un espace euclidien est un couple $(E, \langle\  \rangle)$ o\`u $E$ est un Rev de dimension finie et $\langle\  \rangle$ un ps sur $E$
 \end{defi}
 
 \begin{prop} Faits de base
@@ -176,9 +190,10 @@ Soit $F$ un sev de $E$ tel que $E = F \oplus F^\perp$. Soit $x \in E$, $x = y + 
 
 \subsection{Hyperplans}
 
-\begin{theo}
-	Si $\varphi$ est une forme lin\'eaire sur $E$ alors il existe un unique $a \in E$ tel que $\varphi = <a,.>$ \\
-	Soit $H$ un hyperplan, il existe alors $a \in E\backslash \{0\}$ tel que $H = \ker <a,.> = \{x \in E , <a,x> = 0\} = \{a\}^\perp$
+\begin{theo} Formes lin\'eaires \\
+	Si $\varphi$ est une forme lin\'eaire sur $E$ alors il existe un unique $a \in E$ tel que $\varphi = \langle a,. \rangle$ \\
+	Ainsi, si $H$ est un hyperplan, il existe alors $a \in E\backslash \{0\}$ tel que: \\$H = Ker\ \langle a,. \rangle = \{x \in E ,\ \langle a,x
+	\rangle = 0\} = \{a\}^\perp$
 \end{theo}
 
 \begin{prop}
@@ -186,27 +201,12 @@ Soit $F$ un sev de $E$ tel que $E = F \oplus F^\perp$. Soit $x \in E$, $x = y + 
 \end{prop}
 
 \begin{prop}
-	Soit $H$ un hyperplan. Pour $x \in E$, $d(x,H) = d(x, \{a\}^\perp) = \frac {|<a,x>|}{\|a\|}$
+	Soit $H$ un hyperplan. Pour $x \in E$, $d(x,H) = d(x, \{a\}^\perp) = \frac {|\langle a,x \rangle|}{\|a\|}$
 \end{prop}
 
 \begin{defi}
 	On appelle r\'eflexion toute sym\'etrie orthogonale par rapport \`a un hyperplan.
 \end{defi}
-
-\begin{defi} $ $
-	\begin{enumerate}
-		\item Soit $p$ un projecteur de $E$, on dit que $p$ est projecteur orthogonal si $Ker\ p \perp Im\  p \Leftrightarrow Ker\ p
-			\subset Im\ p^\perp$ ou $ Im\ p \subset Ker\ p^\perp$ .
-		\item Soit $s$ une sym\'etrie de $E$, on dit que $s$ est sym\'etrie orthogonale si $Ker\ (s-Id_E) \perp Ker\ (s + Id_E)$
-	\end{enumerate}
-\end{defi}
-
-\begin{prop} $ $
-	\begin{enumerate}
-		\item $p$ est un projecteur orthogonal $\Leftrightarrow \forall x \in E, \|p(x)\| \leq \|x\|$
-		\item $s$ est une sym\'etrie orthogonale $\Leftrightarrow \forall x \in E, \|s(x)\| = \|x\|$
-	\end{enumerate}
-\end{prop}
 
 %Le groupe orthogonal {{{1
 \section{Le groupe orthogonal}
@@ -216,10 +216,94 @@ Soit $F$ un sev de $E$ tel que $E = F \oplus F^\perp$. Soit $x \in E$, $x = y + 
 	\|f(x)\| = \|x\|$
 \end{defi}
 
-\begin{prop} On note $O(E)$ l'ensemble des isom\'etries de $E$
+\begin{prop} Ensemble $O(E)$ des isom\'etries de $E$
 	\begin{enumerate}
-		\item $O(E) \subset GL(E)$
-		\item $O(E)$ est un sous groupe de $(GL(E),\circ)$
+		\item [-] $O(E) \subset GL(E)$
+		\item [-] $O(E)$ est un sous groupe de $(GL(E),\circ)$
+	\end{enumerate}
+\end{prop}
+
+\begin{prop} Isom\'etries
+	\begin{enumerate}
+		\item [-] $\forall x,y \in F,\ \langle f(x), f(y) \rangle = \langle x,y \rangle$
+			\begin{enumerate}
+				\item $\forall x,y \in E,\ \langle x,y \rangle = 0 \Leftrightarrow \langle f(x), f(y) \rangle = 0$
+				\item $f$ conserve les angles g\'eom\'etriques
+			\end{enumerate}
+		\item [-] Soit $f \in O(E)$ et $F$ un sev de $E$. On suppose $F$ stable par $f$ alors, $F^\perp$ est stable par $f$
+		\item [-] Soit $B = (e_1, \hdots, e_n)$ une BON de $E$, $f \in \mathscr{L}(E)$. On a alors:\\
+			$f \in O(E) \Leftrightarrow (f(e_1), \hdots, f(e_n))$ est une BON de $F$
+	\end{enumerate}
+\end{prop}
+
+\subsection{Matrices orthogonales}
+\begin{defi} Soit $M \in M_n(\mathbb{R})$. On dit que $M$ est une matrice orthogonale ssi l'endomorphisme de $\mathbb{R}^n$ canoniquement
+associ\'e \`a $M$ est une isom\'etrie de l'espace euclidien $(\mathbb{R}^n,$ (ps canonique)). On note $O_n(\mathbb{R})$ l'ensemble des matrices
+orthogonales
+\end{defi}
+
+\begin{prop} $ $
+	\begin{enumerate}
+		\item $O_n(\mathbb{R})$ est un ss gpe de $(GL_n(\mathbb{R}), \times)$
+		\item $M \in O_n(\mathbb{R}) \Leftrightarrow (C_1(M), \hdots, C_n(M))$ est une BON de $(\mathbb{R}^n, .)$
+		\item Soit $M \in M_n(\mathbb{R})$, LASSE:
+			\begin{enumerate}
+				\item $M \in O_n(\mathbb{R})$
+				\item $t_M \times M = I_n$
+				\item $M \times t_M = I_n$
+				\item $M$ est inversible et $M^{-1} = t_M$
+			\end{enumerate}
+		\item $M \in O_n(\mathbb{R}) \Rightarrow |\det| = 1$.  Il existe des matrices orthogonales de determinant 1 et -1. On note
+			$SO_n(\mathbb{R})$ l'ensemble des matrices orthogonales de d\'eterminant 1.
+		\item Soit $(E, \langle  \rangle)$ un espace euclidien, $B$ une BON de $E$, $f \in \mathscr{L}(E)$, alors $f \in O(E) \Leftrightarrow Mat_B(f)
+			\in O_n(\mathbb{R})$
+		\item $f \in O(E) \Rightarrow |\det f| = 1$
+		\item Soit $P$ la matrice de passage d'une BON vers une autre BON alors $P \in O_n(\mathbb{R})$
+	\end{enumerate}
+\end{prop}
+
+\subsection{Produit mixte}
+
+\begin{prop}
+	Soit $f \in \mathscr{L}(E)$ et $\beta$ une BOND. On a:
+	\begin{itemize}
+		\item [-] $f \in SO(E) \Leftrightarrow f(\beta)$ est une BOND
+		\item [-] $f \in O(E) \backslash SO(E) \Leftrightarrow f(\beta)$ est une BONR
+	\end{itemize}
+\end{prop}
+
+\begin{defi} Produit mixte \\
+	Soit $(E, \langle\   \rangle)$ un espace euclidien orient\'e de dimension $n$. Pour $B,C$ deux BOND de $E$ on a $\det_B = \det_C$.
+	Par d\'efinition, pour $(x_1, \hdots, x_n) \in E^n$, le produit mixte de $(x_1, \hdots, x_n)$ est $[x_1, \hdots, x_n] =
+	\det_B (x_1, \hdots, x_n)$ Avec $B$ une BOND quelconque.
+\end{defi}
+
+\subsection{Produit vectoriel en dimension 3}
+
+\begin{defi}
+	Soit $E$ euclidien orient\'e de dimension trois. Pour tout $(x,y) \in E^2$, il existe un et un seul $w \in E$ appell\'e produit vectoriel de
+	$x$ et $y$ tel que $\forall x \in E,\ [x,y,z] = \langle w,z \rangle$
+\end{defi}
+
+\begin{prop} $ $
+	\begin{enumerate}
+		\item [-] $x \wedge y \in \{x,y\}^\perp$
+		\item [-] $(x,y) \in E^2 \mapsto x \wedge y$ est bilin\'eaire altern\'e (donc antysim\'etrique)
+		\item [-] Soit $(x,y) \in E^2$:
+			\begin{enumerate}
+				\item Si $(x,y)$ est li\'ee alors $x \wedge y = 0_E$
+				\item Si $(x,y)$ est libre alors $(x,y,x \wedge y)$ est une base directe de $E$
+				\item $x \wedge y = 0 \Leftrightarrow (x,y)$ li\'ee
+			\end{enumerate}
+		\item [-] Soit $(e_1, e_2, e_3)$ une BOND de $E$, alors:
+			\begin{enumerate}
+				\item $e_1 \wedge e_2 = e_3$
+				\item $e_2 \wedge e_3 = e_1$
+				\item $e_3 \wedge e_1 = e_2$
+			\end{enumerate}
+		\item [-] Si $a$ et $b$ sont deux vecteurs unitaires orthogonaux, alors $a \wedge b$ est l'unique vecteur de $E$ tel que
+			$(a,b,a \wedge b)$ est une BOND de $E$
+		\item [-] $\| a \wedge b \| = \|a\| \|b\| \sin \theta$ (avec $\theta$ l'angle g\'eom\'etrique)
 	\end{enumerate}
 \end{prop}
 
